fixed spacing on memory module in waybar

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -197,8 +197,8 @@ tooltip {
     color: #cba6f7;
     background: rgba(25, 25, 25, 0.65);
     border-radius: 0px 10px 10px 0px;
+    padding-right: 15px;
     margin-right: 5px;
-    border-left: 0px;
     border-top: 0px solid transparent;
     border-bottom: 0px solid transparent;
     border-right: 0px solid transparent;
